# graphene-django-permissions

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
graphene_django_permissions/: __init__.py  middleware.py
tests/: __init__.py  factories.py  models.py  schema.py  schema_relay.py  settings.py  test_graphene_django_permissions.py  test_middleware.py  test_middleware_relay.py  urls.py  utils.py  wsgi.py
tests/migrations/: 0001_initial.py
